--- a/date.html
+++ b/date.html
@@ -8,7 +8,7 @@
 	<script type="text/javascript">
 	   function clock(){
 	   	var dayname=['Sunday','Monday','Tuesday','Wednesday','Thursday','Friday','satursday'];
-	   	var datetime=new Date();//create an object of date class
+	   	var datetime=new Date();
 	   	var d=datetime.getDate();
 	   	var m=datetime.getMonth();
 	   	var y=datetime.getFullYear();
